# RepositorioPracticasJacqueline

./: .gitattributes  .gitignore
bazel-java-intro/: .bazelrc  MODULE.bazel  README.md
bazel-java-intro/bazel-bazel-java-intro/: MODULE.bazel
bazel-java-intro/bazel-bazel-java-intro/bazel-out/: stable-status.txt  volatile-status.txt
bazel-java-intro/jvm-deps/: BUILD.bazel  maven.MODULE.bazel
bazel-java-intro/pkg/: BUILD
bazel-java-intro/pkg/booking/app/: BUILD.bazel
bazel-java-intro/pkg/booking/app/com/masorange/booking/app/: Main.java
bazel-java-intro/pkg/booking/application/: BUILD.bazel
bazel-java-intro/pkg/booking/application/com/masorange/booking/application/: BookingRepository.java  CreateBooking.java  CreateBookingTest.java  CreateRoom.java  CreateRoomTest.java  RoomRepository.java
bazel-java-intro/pkg/booking/domain/: BUILD.bazel
bazel-java-intro/pkg/booking/domain/com/masorange/booking/domain/: Booking.java  Capacity.java  CapacityTest.java  Room.java  RoomId.java  RoomIdTest.java  RoomName.java  RoomNameTest.java  RoomTest.java  TimeSlot.java
bazel-java-intro/pkg/booking/infrastructure/: BUILD.bazel
bazel-java-intro/pkg/booking/infrastructure/com/masorange/booking/infrastructure/: InMemoryBookingRepository.java  InMemoryRoomRepository.java
bazel-java-intro/pkg/com/miempresa/: Main.java  Saludo.java  SaludoTest.java
bazel-java-intro/pkg/grading/app/: BUILD.bazel
bazel-java-intro/pkg/grading/app/com/masorange/grading/app/: Main.java
bazel-java-intro/pkg/grading/application/: BUILD.bazel
bazel-java-intro/pkg/grading/application/com/masorange/grading/application/: CalculateAverage.java  CalculateAverageTest.java  CalculateExtremes.java  CalculateExtremesTest.java  GradeRepository.java  RecordGrade.java  RecordGradeTest.java
bazel-java-intro/pkg/grading/domain/: BUILD.bazel
bazel-java-intro/pkg/grading/domain/com/masorange/grading/domain/: Grade.java  GradeTest.java  StudentGrade.java  StudentGradeTest.java  Subject.java  SubjectTest.java
bazel-java-intro/pkg/grading/infrastructure/: BUILD.bazel
bazel-java-intro/pkg/grading/infrastructure/com/masorange/grading/infrastructure/: InMemoryGradeRepository.java
bazel-java-intro/pkg/registry/app/: BUILD.bazel
bazel-java-intro/pkg/registry/app/com/masorange/registry/app/: Main.java
bazel-java-intro/pkg/registry/application/classgroup/: BUILD.bazel
bazel-java-intro/pkg/registry/application/classgroup/com/masorange/registry/application/classgroup/: AddStudentToClassGroup.java  AddStudentToClassGroupTest.java  ClassGroupRepository.java  CreateClassGroup.java  CreateClassGroupTest.java  ListStudentsByClassGroup.java  ListStudentsByClassGroupTest.java
bazel-java-intro/pkg/registry/application/student/: BUILD.bazel
bazel-java-intro/pkg/registry/application/student/com/masorange/registry/application/student/: CreateStudent.java  CreateStudentTest.java  StudentRepository.java
bazel-java-intro/pkg/registry/application/teacher/: BUILD.bazel
bazel-java-intro/pkg/registry/application/teacher/com/masorange/registry/application/teacher/: AssignSubject.java  AssignSubjectTest.java  CreateTeacher.java  CreateTeacherTest.java  TeacherRepository.java  TeachingAssignmentRepository.java
bazel-java-intro/pkg/registry/domain/classgroup/: BUILD.bazel
bazel-java-intro/pkg/registry/domain/classgroup/com/masorange/registry/domain/classgroup/: ClassGroup.java  ClassGroupId.java  ClassGroupIdTest.java  ClassGroupName.java  ClassGroupNameTest.java  ClassGroupTest.java
bazel-java-intro/pkg/registry/domain/student/: BUILD.bazel
bazel-java-intro/pkg/registry/domain/student/com/masorange/registry/domain/student/: Email.java  Student.java  StudentId.java  StudentIdTest.java  StudentName.java  StudentNameTest.java  StudentTest.java
bazel-java-intro/pkg/registry/domain/teacher/: BUILD.bazel
bazel-java-intro/pkg/registry/domain/teacher/com/masorange/registry/domain/teacher/: SubjectName.java  SubjectNameTest.java  Teacher.java  TeacherId.java  TeacherIdTest.java  TeacherName.java  TeacherNameTest.java  TeacherTest.java  TeachingAssignment.java  TeachingAssignmentTest.java
bazel-java-intro/pkg/registry/infrastructure/classgroup/: BUILD.bazel
bazel-java-intro/pkg/registry/infrastructure/classgroup/com/masorange/registry/infrastructure/classgroup/: InMemoryClassGroupRepository.java
bazel-java-intro/pkg/registry/infrastructure/student/: BUILD.bazel
bazel-java-intro/pkg/registry/infrastructure/student/com/masorange/registry/infrastructure/student/: InMemoryStudentRepository.java
bazel-java-intro/pkg/registry/infrastructure/teacher/: BUILD.bazel
bazel-java-intro/pkg/registry/infrastructure/teacher/com/masorange/registry/infrastructure/teacher/: InMemoryTeacherRepository.java  InMemoryTeachingAssignmentRepository.java
bazel-java-intro/src/main/: BUILD
bazel-java-intro/utils/: BUILD.bazel  Calculadora.java  CalculadoraTest.java
src/: Main.java
