maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "junit:junit:4.13.2",
        "com.fasterxml.jackson.core:jackson-databind:2.13.4",
        "com.fasterxml.jackson.core:jackson-core:2.13.4",
        "com.fasterxml.jackson.core:jackson-annotations:2.13.4",
        "com.google.code.gson:gson:2.10.1",
        "org.slf4j:slf4j-api:1.7.36",
        "ch.qos.logback:logback-classic:1.2.11",
        "org.apache.commons:commons-text:1.9",
        "com.google.guava:guava:31.1-jre",
    ],
)
use_repo(maven, "maven")
