java_library(
    name = "calculadora",
    srcs = ["Calculadora.java"],
    visibility = ["//visibility:public"], 
)

java_test(
    name = "CalculadoraTest",
    srcs = ["CalculadoraTest.java"],
    test_class = "utils.CalculadoraTest",
    deps = [
        ":calculadora",         # Probamos esta librería
        "@maven//:junit_junit", # Usamos JUnit para probar
    ],
)