# Booking application layer - use cases and repository interface.
#
# Contains:
#   - RoomRepository: interface for persisting/finding rooms
#   - CreateRoom: use case to create a new room with name and capacity

load("@rules_java//java:defs.bzl", "java_library", "java_test")

java_library(
    name = "application",
    srcs = glob(
        ["com/masorange/booking/application/*.java"],
        exclude = ["com/masorange/booking/application/*Test.java"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/booking/domain",  # Uses Room, RoomId, RoomName, Capacity
    ],
)

java_test(
    name = "CreateRoomTest",
    srcs = ["com/masorange/booking/application/CreateRoomTest.java"],
    test_class = "com.masorange.booking.application.CreateRoomTest",
    size = "small",
    deps = [
        ":application",
        "//pkg/booking/domain",
        "//pkg/booking/infrastructure",
        "//jvm-deps:junit",
    ],
)
