# Booking domain layer - value objects for the room reservation bounded context.
#
# Contains:
#   - RoomId: UUID-based room identifier
#   - RoomName: validated room name (e.g., "Aula 101")
#   - Capacity: positive integer representing max occupancy
#   - Room: aggregate combining the three above
#
# This domain is completely independent — it has NO dependencies on registry or grading.

load("@rules_java//java:defs.bzl", "java_library", "java_test")

java_library(
    name = "domain",
    srcs = glob(
        ["com/masorange/booking/domain/*.java"],
        exclude = ["com/masorange/booking/domain/*Test.java"],
    ),
    visibility = ["//visibility:public"],
)

# -- Tests --

java_test(
    name = "RoomIdTest",
    srcs = ["com/masorange/booking/domain/RoomIdTest.java"],
    test_class = "com.masorange.booking.domain.RoomIdTest",
    size = "small",
    deps = [
        ":domain",
        "//jvm-deps:junit",
    ],
)

java_test(
    name = "RoomNameTest",
    srcs = ["com/masorange/booking/domain/RoomNameTest.java"],
    test_class = "com.masorange.booking.domain.RoomNameTest",
    size = "small",
    deps = [
        ":domain",
        "//jvm-deps:junit",
    ],
)

java_test(
    name = "CapacityTest",
    srcs = ["com/masorange/booking/domain/CapacityTest.java"],
    test_class = "com.masorange.booking.domain.CapacityTest",
    size = "small",
    deps = [
        ":domain",
        "//jvm-deps:junit",
    ],
)

java_test(
    name = "RoomTest",
    srcs = ["com/masorange/booking/domain/RoomTest.java"],
    test_class = "com.masorange.booking.domain.RoomTest",
    size = "small",
    deps = [
        ":domain",
        "//jvm-deps:junit",
    ],
)
