# Booking infrastructure layer - concrete implementation of RoomRepository.
#
# Contains InMemoryRoomRepository: a HashMap-based implementation.

load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "infrastructure",
    srcs = glob(["com/masorange/booking/infrastructure/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/booking/application",  # Implements RoomRepository interface
        "//pkg/booking/domain",       # Uses Room, RoomId (map key and value)
    ],
)
