# Grading application entry point - the Main.java that wires everything together.
#
# Uses Gson for JSON serialization and Commons Text StringSubstitutor for report templates.
# Depends on registry's identity targets (:id) to reference students and teachers.
#
# Run with: bazel run //pkg/grading/app:main

load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "app_lib",
    srcs = glob(["com/masorange/grading/app/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        # External libraries
        "//jvm-deps:commons-text",  # StringSubstitutor for text templates
        "//jvm-deps:gson",          # Gson for JSON serialization

        # Grading layers
        "//pkg/grading/application",
        "//pkg/grading/domain",
        "//pkg/grading/infrastructure",

        # Registry identity targets (only IDs, not full domains)
        "//pkg/registry/domain/student:id",
        "//pkg/registry/domain/teacher:id",
    ],
)

java_binary(
    name = "main",
    main_class = "com.masorange.grading.app.Main",
    runtime_deps = [
        ":app_lib",
    ],
)
