# Grading application layer - use cases and repository interface.
#
# Contains:
#   - GradeRepository: interface for persisting/finding student grades
#   - RecordGrade: use case to record a grade for a student in a subject
#   - CalculateAverage: use case to calculate a student's average grade

load("@rules_java//java:defs.bzl", "java_library", "java_test")

java_library(
    name = "application",
    srcs = glob(
        ["com/masorange/grading/application/*.java"],
        exclude = ["com/masorange/grading/application/*Test.java"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/grading/domain",              # Uses Grade, Subject, StudentGrade
        "//pkg/registry/domain/student:id",  # Uses StudentId (to find grades by student)
        "//pkg/registry/domain/teacher:id",  # Uses TeacherId (who assigned the grade)
    ],
)

# -- Tests --

java_test(
    name = "RecordGradeTest",
    srcs = ["com/masorange/grading/application/RecordGradeTest.java"],
    test_class = "com.masorange.grading.application.RecordGradeTest",
    size = "small",
    deps = [
        ":application",
        "//pkg/grading/domain",
        "//pkg/grading/infrastructure",
        "//pkg/registry/domain/student:id",
        "//pkg/registry/domain/teacher:id",
        "//jvm-deps:junit",
    ],
)

java_test(
    name = "CalculateAverageTest",
    srcs = ["com/masorange/grading/application/CalculateAverageTest.java"],
    test_class = "com.masorange.grading.application.CalculateAverageTest",
    size = "small",
    deps = [
        ":application",
        "//pkg/grading/domain",
        "//pkg/grading/infrastructure",
        "//pkg/registry/domain/student:id",
        "//pkg/registry/domain/teacher:id",
        "//jvm-deps:junit",
    ],
)

java_test(
    name = "CalculateExtremesTest",
    srcs = ["com/masorange/grading/application/CalculateExtremesTest.java"],
    test_class = "com.masorange.grading.application.CalculateExtremesTest",
    size = "small",
    deps = [
        ":application",
        "//pkg/grading/domain:domain",
        "//pkg/grading/infrastructure:infrastructure",
        "//pkg/registry/domain/student:id",
        "//pkg/registry/domain/teacher:id", # <--- AÑADE ESTA LÍNEA
        "//jvm-deps:junit",
    ],
)