# Grading domain layer - value objects for the grading bounded context.
#
# Contains:
#   - Grade: a numeric value between 0 and 10
#   - Subject: the name of a school subject (e.g., "Mathematics")
#   - StudentGrade: aggregate linking a student, subject, grade, and the teacher who graded
#
# This domain depends on StudentId and TeacherId from the registry domain.
# It only imports the :id targets (identities), NOT the full student/teacher domains.

load("@rules_java//java:defs.bzl", "java_library", "java_test")

java_library(
    name = "domain",
    srcs = glob(
        ["com/masorange/grading/domain/*.java"],
        exclude = ["com/masorange/grading/domain/*Test.java"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/registry/domain/student:id",  # StudentGrade references StudentId
        "//pkg/registry/domain/teacher:id",  # StudentGrade references TeacherId
    ],
)

# -- Tests --

java_test(
    name = "GradeTest",
    srcs = ["com/masorange/grading/domain/GradeTest.java"],
    test_class = "com.masorange.grading.domain.GradeTest",
    size = "small",
    deps = [
        ":domain",
        "//jvm-deps:junit",
    ],
)

java_test(
    name = "SubjectTest",
    srcs = ["com/masorange/grading/domain/SubjectTest.java"],
    test_class = "com.masorange.grading.domain.SubjectTest",
    size = "small",
    deps = [
        ":domain",
        "//jvm-deps:junit",
    ],
)

java_test(
    name = "StudentGradeTest",
    srcs = ["com/masorange/grading/domain/StudentGradeTest.java"],
    test_class = "com.masorange.grading.domain.StudentGradeTest",
    size = "small",
    deps = [
        ":domain",
        "//pkg/registry/domain/student:id",
        "//pkg/registry/domain/teacher:id",
        "//jvm-deps:junit",
    ],
)
