# ClassGroup application layer - use cases and repository interface.
#
# Contains:
#   - ClassGroupRepository: interface for persisting/finding class groups
#   - CreateClassGroup: use case to create a new group with a tutor teacher
#   - AddStudentToClassGroup: use case to add a student to an existing group

load("@rules_java//java:defs.bzl", "java_library", "java_test")

java_library(
    name = "application",
    srcs = glob(
        ["com/masorange/registry/application/classgroup/*.java"],
        exclude = ["com/masorange/registry/application/classgroup/*Test.java"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/registry/domain/classgroup:domain",  # Uses ClassGroup, ClassGroupId, ClassGroupName
        "//pkg/registry/domain/student:id",          # Uses StudentId (to add students)
        "//pkg/registry/domain/teacher:id",          # Uses TeacherId (tutor of the group)
    ],
)

java_test(
    name = "CreateClassGroupTest",
    srcs = ["com/masorange/registry/application/classgroup/CreateClassGroupTest.java"],
    test_class = "com.masorange.registry.application.classgroup.CreateClassGroupTest",
    size = "small",
    deps = [
        ":application",
        "//pkg/registry/domain/classgroup:domain",
        "//pkg/registry/domain/teacher:id",
        "//pkg/registry/infrastructure/classgroup:infrastructure",
        "//jvm-deps:junit",
    ],
)

java_test(
    name = "AddStudentToClassGroupTest",
    srcs = ["com/masorange/registry/application/classgroup/AddStudentToClassGroupTest.java"],
    test_class = "com.masorange.registry.application.classgroup.AddStudentToClassGroupTest",
    size = "small",
    deps = [
        ":application",
        "//pkg/registry/domain/classgroup:domain",
        "//pkg/registry/domain/student:id",
        "//pkg/registry/domain/teacher:id",
        "//pkg/registry/infrastructure/classgroup:infrastructure",
        "//jvm-deps:junit",
    ],
)

java_test(
    name = "ListStudentsByClassGroupTest",
    srcs = ["com/masorange/registry/application/classgroup/ListStudentsByClassGroupTest.java"],
    test_class = "com.masorange.registry.application.classgroup.ListStudentsByClassGroupTest",
    size = "small",
    deps = [
        ":application",
        "//pkg/registry/domain/classgroup:domain",
        "//pkg/registry/domain/student:id",
        "//pkg/registry/domain/teacher:id",  
        "//pkg/registry/infrastructure/classgroup:infrastructure",
        "//jvm-deps:junit",
    ],
)