# ClassGroup domain layer - the aggregate that groups students under a tutor teacher.
#
# ClassGroup depends on StudentId and TeacherId (identity-only targets from other domains).
# It does NOT depend on the full Student or Teacher domains — only their IDs.
# This keeps the dependency graph minimal and allows independent evolution.

load("@rules_java//java:defs.bzl", "java_library", "java_test")

# Domain library: ClassGroup aggregate + ClassGroupId and ClassGroupName value objects.
# glob() automatically picks up all .java files, excluding test files.
java_library(
    name = "domain",
    srcs = glob(
        ["com/masorange/registry/domain/classgroup/*.java"],
        exclude = ["com/masorange/registry/domain/classgroup/*Test.java"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/registry/domain/student:id",  # Needs StudentId (students belong to a group)
        "//pkg/registry/domain/teacher:id",   # Needs TeacherId (each group has a tutor)
    ],
)

# -- Tests --

java_test(
    name = "ClassGroupIdTest",
    srcs = ["com/masorange/registry/domain/classgroup/ClassGroupIdTest.java"],
    test_class = "com.masorange.registry.domain.classgroup.ClassGroupIdTest",
    size = "small",
    deps = [
        ":domain",
        "//jvm-deps:junit",
    ],
)

java_test(
    name = "ClassGroupNameTest",
    srcs = ["com/masorange/registry/domain/classgroup/ClassGroupNameTest.java"],
    test_class = "com.masorange.registry.domain.classgroup.ClassGroupNameTest",
    size = "small",
    deps = [
        ":domain",
        "//jvm-deps:junit",
    ],
)

java_test(
    name = "ClassGroupTest",
    srcs = ["com/masorange/registry/domain/classgroup/ClassGroupTest.java"],
    test_class = "com.masorange.registry.domain.classgroup.ClassGroupTest",
    size = "small",
    deps = [
        ":domain",
        "//pkg/registry/domain/student:id",
        "//pkg/registry/domain/teacher:id",
        "//jvm-deps:junit",
    ],
)
